--- a/shop.html
+++ b/shop.html
@@ -124,7 +124,7 @@
           </button>
         </form>
       </div>
-      <div class="row mx-auto container">
+      <div class="row mx-auto container col-md-9">
         <!-- Product 1 -->
         <div class="card product" style="width: 18rem">
           <img
