--- a/shop.html
+++ b/shop.html
@@ -187,7 +187,7 @@
                 data-price="50.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -217,7 +217,7 @@
                 data-price="92.00"
                 data-micron="squeeze"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -273,7 +273,7 @@
                 data-price="50.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -299,7 +299,7 @@
                 data-price="50.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -325,7 +325,7 @@
                 data-price="50.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -377,7 +377,7 @@
                 data-price="50.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -407,7 +407,7 @@
                 data-price="100.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -437,7 +437,7 @@
                 data-price="150.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -467,7 +467,7 @@
                 data-price="80.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
