--- a/shop.html
+++ b/shop.html
@@ -247,7 +247,7 @@
                 data-price="76.00"
                 data-micron="blink"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
@@ -351,7 +351,7 @@
                 data-price="50.00"
                 data-micron="jelly"
               >
-                add to cart
+                Add to cart
               </button>
             </div>
           </div>
