--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <h5 class="pb-2">Contact Us</h5>
           <div>
             <h6 class="text-uppercase">Address</h6>
-            <p>Canarvacanan, Binanlonan, Pangasinan</p>
+            <p>Canarvacanan, Binalonan, Pangasinan</p>
           </div>
           <div>
             <h6 class="text-uppercase">Phone</h6>
