--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
         <div class="footer-one col-lg-3 col-md-6 col-12">
           <h5 class="title">SassyCart</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum,
-            officiis excepturi. Natus adipisci fuga velit dolorem.
+             <p class="lead">We're redefining online shopping with a touch of sass and style.</p>
+        <p>Founded in 2023, SassyCart was born from a simple idea: shopping online should be fun, straightforward, and full of personality. We curate high-quality fashion, accessories, and lifestyle products that help you express your unique style without breaking the bank.</p>
+        <p>Our team of fashion enthusiasts works tirelessly to source the latest trends and timeless classics, ensuring that there's something for everyone in our carefully selected collection.</p>
           </p>
         </div>
         <div class="footer-one col-lg-3 col-md-6 col-12">
